--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 API_ID = <your_api_id>
 API_HASH = "<your_api_hash>"
-BOT_TOKEN = "<your_bot_token>"
-CHAT_ID = <your_chat_id_1>,<your_chat_id_2>
+BOT_TOKEN = "<6268171294:AAGBIBXu3gEQeegjB99FUpLFJrDzp9zr22E>"
+CHAT_ID = <-1001983626693>
